# claude4_autonomous_code_review

./: pyproject.toml
bad_code_bak/: code_quality_nightmare.py
code_under_review/: bug_paradise.py  performance_disaster.py  security_nightmare.py
src/claude4_autonomous_code_review/: README.md  __init__.py  apply_fixes.py  claude4_client.py  clean_review.py  config.py  debug_fixes.py  demo.py  enhanced_file_editor.py  iteration_prompts.py  main.py  phase1_only.py  phase2_only.py  phase3_only.py  run_3_phases.py  setup.py  simple_file_editor.py  three_phase_reviewer.py  view_results.py
